@@ -47,9 +47,10 @@ namespace Orthanc
     virtual void SignalRemainingAncestor(ResourceType parentType,
                                          const std::string& publicId) = 0;
 
-    virtual void SignalResourceDeleted(ResourceType type,
-                                       const std::string& publicId) = 0;
-
     virtual void SignalFileDeleted(const FileInfo& info) = 0;
+
+    virtual void SignalChange(ChangeType changeType,
+                              ResourceType resourceType,
+                              const std::string& publicId) = 0;
   };
 }
